linkedin icon correctly linked, spacing rectified and external links updated

--- a/src/scss/header.module.scss
+++ b/src/scss/header.module.scss
@@ -31,6 +31,11 @@
   border-radius: 50%;
   margin-right: 10px;
   box-shadow: 0 4px 10px rgb(189, 189, 189);
+  background-image: linear-gradient(
+    160deg,
+    rgb(129, 247, 247),
+    rgb(197, 255, 195)
+  );
 }
 .profile-icon {
   display: flex;
@@ -69,6 +74,11 @@
   box-shadow: 0 4px 10px rgb(189, 189, 189);
   border-radius: 50%;
   margin-right: 20px;
+  background-image: linear-gradient(
+    160deg,
+    rgb(129, 247, 247),
+    rgb(197, 255, 195)
+  );
 }
 
 .top-right-col img {
