--- a/src/scss/profile.module.scss
+++ b/src/scss/profile.module.scss
@@ -83,9 +83,6 @@
   flex-direction: column;
 }
 
-.top-right-in {
-  margin-left: 1rem;
-}
 .usersname {
   font-size: 30px;
   font-weight: 550;
